UtahLiveDataTest/src/objects/AmendmentType__c.object
<CustomObject>
    <description>[Business]This object is a place holder for Approval Amendment Type which will follow the convention followed by HRSA. HRSA does not have classification when grouping types and currently follows only one type &apos;Prior Approval&apos;. GovGrants Amendment type classify types into three different types namely  
Prior Approval - Small change to the amendment which does not allow changes to Budget Period and Budget Cost
Formal Approval - Significant changes to Budget Time and/or Cost and results in new AWARD
Periodic/Continuous Renewals -</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NOGARequired__c</fullName>
        <label>NOGA Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ResultingAwardType__c</fullName>
        <label>Resulting Award Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SubType__c</fullName>
        <label>Sub Type</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prior Approval</fullName>
                </value>
                <value>
                    <fullName>Formal Amendment</fullName>
                </value>
                <value>
                    <fullName>Periodic Amendment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UGGReference__c</fullName>
        <label>UGG Reference</label>
        <type>TextArea</type>
    </fields>
    <label>MST: AmendmentType</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AmendmentTypes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>